<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/common_toolbar"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_margin_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dpsize_big" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/gesture_ciper_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dpsize_big" />


    </RelativeLayout>


    <ImageView
        android:layout_width="@dimen/gesture_header_width"
        android:layout_height="@dimen/gesture_header_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/gesture_header_margint_bottom"
        android:layout_marginTop="@dimen/activity_margin_vertical2"
        android:src="@drawable/head_portrait" />


    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="OTP账号"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_dpsize_normal" />


    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/gesture_verify_password1"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_dpsize_normal" />

    <com.leo.gesturelibray.view.CustomLockView
        android:id="@+id/lv_lock"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>