<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_height"
        android:layout_marginTop="@dimen/nav_margin_top"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="@dimen/nav_item_icon_width"
            android:layout_height="@dimen/nav_item_icon_height"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:src="@drawable/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:text="@string/nav_home"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dpsize_normal" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_again"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_height"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="@dimen/nav_item_icon_width"
            android:layout_height="@dimen/nav_item_icon_height"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:src="@drawable/activation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:text="@string/nav_again"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dpsize_normal" />


    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_time"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/nav_item_height"-->
        <!--android:gravity="center_vertical">-->


        <!--<ImageView-->
            <!--android:layout_width="@dimen/nav_item_icon_width"-->
            <!--android:layout_height="@dimen/nav_item_icon_height"-->
            <!--android:layout_marginLeft="@dimen/nav_item_margin_horizontal"-->
            <!--android:src="@drawable/time" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="@dimen/nav_item_margin_horizontal"-->
            <!--android:text="@string/nav_time"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="@dimen/text_dpsize_normal" />-->


    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_height"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="@dimen/nav_item_icon_width"
            android:layout_height="@dimen/nav_item_icon_height"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:src="@drawable/left_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/nav_item_margin_horizontal"
            android:text="@string/nav_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dpsize_normal" />


    </LinearLayout>


</LinearLayout>